Switch to postgres and add documentation (#1)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "relayer-interview"
-version = "0.1.0"
+name = "ethereum_max_wei_finder"
+version = "1.0.0"
 description = ""
 authors = ["William Wilson <williambwilson@msn.com>"]
 readme = "README.md"
@@ -10,6 +10,9 @@ python = "^3.8"
 pyyaml = "^6.0.1"
 requests = "^2.31.0"
 tqdm = "^4.66.2"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
+pdoc3 = "^0.10.0"
 
 
 [build-system]
